<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MasrcbMobileOA</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_button">登陆</string>
    <string name="header_title_diary">日志</string>
    <string name="header_title_diary_new">新的日志</string>
    <string name="header_title_diary_detail">日志内容</string>
    <string name="header_title_announce">公告</string>
    <string name="header_title_announce_detail">公告详情</string>
    <string name="header_title_mail">站内邮箱</string>
    <string name="header_title_mail_new">新邮件</string>
    <string name="bottom_item_diary">日志</string>
    <string name="bottom_item_announce">公告</string>
    <string name="bottom_item_mail">站内邮箱</string>
    <string name="filter_item_all">全部的</string>
    <string name="filter_item_today">当天的</string>
    <string name="filter_item_week">一星期的</string>
    <string name="filter_item_month">一个月的</string>
    <string name="filter_item_quarter">一季度的</string>
    <string name="filter_item_halfyear">半年的</string>
    <string name="filter_item_year">一年的</string>
    <string name="mail_item_new">新邮件</string>
    <string name="mail_item_reveive">收件箱</string>
    <string name="mail_item_send">发件箱</string>
    <string name="mail_item_draft">草稿箱</string>
    <string name="mail_item_recycle">回收站</string>

</resources>