<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:baselineAligned="false"
    android:background="#d9eaf6"
    android:gravity="center"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_item_one"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_item_selector"
            android:drawableTop="@drawable/bottom_bar_icon_diary_selector"
            android:text="@string/bottom_item_diary"
            android:textColor="@drawable/bottom_item_text_selector"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_item_two"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_item_selector"
            android:drawableTop="@drawable/bottom_bar_icon_announce_selector"
            android:text="@string/bottom_item_announce"
            android:textColor="@drawable/bottom_item_text_selector"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_item_three"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_item_selector"
            android:drawableTop="@drawable/bottom_bar_icon_mail_selector"
            android:text="@string/bottom_item_mail"
            android:textColor="@drawable/bottom_item_text_selector"
            android:textSize="12sp" />
    </RelativeLayout>

</LinearLayout>