<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
    	android:background="@null" >
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15.0dip"
        android:layout_weight="4" >

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/shape_milkwhite_upside_circlecorner"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@+id/login_username"
            android:background="@drawable/shape_milkwhite_upside_circlecorner"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_below="@+id/login_password"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/hovered_stroke_white2deepblue"
            android:text="@string/login_button"
            android:textSize="20sp"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
    	android:background="@null" >
    </RelativeLayout>

</LinearLayout>